--- a/css/structure/header.css
+++ b/css/structure/header.css
@@ -101,8 +101,8 @@ header h2 span {
 /**-------------------------------------------------- 3. Languages ------------------------------------------------------**/
 
 #boardLanguages { /**all languages panel**/
-	/**display:inline-block;**/
-	display:none;
+	display:inline-block;
+	/*display:none;*/
 	position:relative;
 	left:80.1%;
 	width:138px;
